--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "089d9d7d-2023-4850-84c4-31f730f1893f"
   },
   "newProjectRoot": "projects",
   "projects": {
